[package]
name = "notion_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

lazy_static = "1.4.0"

thiserror = "1.0"
anyhow = "1.0"

tokio = { version = "1.25.0", features = ["full"] }
sea-orm = { version = "0.11", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
