[package]
name = "notion_api"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

thiserror = "1.0"
anyhow = "1.0"

async-std = { version = "1.9", features = [ "attributes", "tokio1" ] }
sea-orm = { version = "0.11", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

chrono = "0.4.23"

dotenv = "0.15.0"

base64 = "0.21"

md-5 = "0.10.5"